# PEM-platform

pem_platform/: .gitignore  LICENSE  README.md  pyproject.toml
pem_platform/.github/workflows/: ci.yml  release.yml
pem_platform/examples/configs/: tool_demo.yaml
pem_platform/examples/datasets/: demo_factorial_runs.csv  demo_predict_points.csv  demo_single_response.csv
pem_platform/examples/knowledge/: tool_notes.md  troubleshooting.txt
pem_platform/src/pem/: __init__.py  cli.py
pem_platform/src/pem/adapters/: demo_constraints.py
pem_platform/src/pem/core/: config.py  data.py
pem_platform/src/pem/doe/: analyze.py  design.py
pem_platform/src/pem/model/: metrics.py  surrogate.py
pem_platform/src/pem/optimize/: ax_bo.py  recommend.py
pem_platform/src/pem/rag/: chat.py  index.py
pem_platform/src/pem/viz/: __init__.py  doe_plots.py  model_plots.py
pem_platform/tests/: test_smoke.py
